--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
 .para1 , .para3{
 	color:#00f;
-	background-color:#eee;
+	background-color:rgba(0, 0, 0, 0);
 }
